[package]
name = "yarws"
version = "0.3.1"
description = "Yet Another Rust WebSocket library"
authors = ["Igor Anic <igor.anic@gmail.com>"]
repository = "https://github.com/ianic/yarws"
homepage = "https://github.com/ianic/yarws"
documentation = "https://docs.rs/yarws/0.3.1"
readme = "README.md"
categories = ["web-programming::websocket", "network-programming"]
keywords = ["websocket", "tokio"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.4"
hex-literal = "0.3.1"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.0"
futures = "0.3"
inflate = "0.4.5"
miniz_oxide = "0.4"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.5.0"
slog-async = "2.5.0"
slog-stdlog = "4.0.0"
failure = "0.1.7"
structopt = "0.3.14"
rand = "0.7.3"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
native-tls = "0.2.7"